mv all item to root dir

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ p {
   clear: both;
 }
 body {
-  background-image:linear-gradient(rgba(62,20,20,0.4), rgba(62, 20, 20, 0.4)) , url(/images/back.jpg);
+  background-image:linear-gradient(rgba(62,20,20,0.4), rgba(62, 20, 20, 0.4)) , url(back.jpg);
   /* background: linear-gradient(rgba(62,20,20,0.4), rgba(62, 20, 20, 0.4)); */
   background-size: cover;
   background-position: center;
